--- a/app/src/main/res/layout/setup_steps_cards.xml
+++ b/app/src/main/res/layout/setup_steps_cards.xml
@@ -5,7 +5,8 @@
     SPDX-License-Identifier: Apache-2.0 AND GPL-3.0-only
 -->
 
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:id="@+id/setup_step_bullets"
         android:layout_width="match_parent"
@@ -29,33 +30,82 @@
     <helium314.keyboard.latin.setup.SetupStepIndicatorView
         android:id="@+id/setup_step_indicator"
         style="@style/setupStepIndicatorStyle" />
-    <FrameLayout
-        android:id="@+id/setup_steps_panel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <include
-            android:id="@+id/setup_step1"
-            layout="@layout/setup_step" />
-        <include
-            android:id="@+id/setup_step2"
-            layout="@layout/setup_step" />
-        <include
-            android:id="@+id/setup_step3"
-            layout="@layout/setup_step" />
-    </FrameLayout>
-    <TextView
-        android:id="@+id/setup_next"
-        android:text="@string/setup_next_action"
-        android:gravity="end|center_vertical"
-        style="@style/setupStepActionLabelStyleCommon"
-        android:layout_marginTop="@dimen/setup_step_horizontal_line_height" />
-    <TextView
-        android:id="@+id/setup_finish"
-        android:text="@string/setup_finish_action"
-        style="@style/setupStepActionLabelStyle"
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="376dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp"
+        android:padding="0dp">
+
+        <FrameLayout
+            android:id="@+id/setup_steps_panel"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+            <include
+                android:id="@+id/setup_step1"
+                layout="@layout/setup_step"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <include
+                android:id="@+id/setup_step2"
+                layout="@layout/setup_step"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <include
+                android:id="@+id/setup_step3"
+                layout="@layout/setup_step"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+        </FrameLayout>
+
+    </androidx.cardview.widget.CardView>
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view_setup_next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/setup_step_horizontal_line_height"
-        android:paddingTop="@dimen/setup_step_action_padding"
-        android:paddingBottom="@dimen/setup_step_action_padding"
-        android:minHeight="@dimen/setup_step_action_height"
-        android:layout_height="wrap_content"/>
+        app:cardCornerRadius="10dp"
+        app:cardElevation="9dp"
+        app:cardBackgroundColor="@android:color/white"
+        >
+
+        <TextView
+            android:id="@+id/setup_next"
+            android:text="@string/setup_next_action"
+            android:gravity="end|center_vertical"
+            style="@style/setupStepActionLabelStyleCommon"
+            android:padding="8dp" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view_setup_finish"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/setup_step_horizontal_line_height"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="10dp"
+        app:cardBackgroundColor="@android:color/white">
+
+        <TextView
+            android:id="@+id/setup_finish"
+            android:text="@string/setup_finish_action"
+            style="@style/setupStepActionLabelStyle"
+            android:paddingTop="@dimen/setup_step_action_padding"
+            android:paddingBottom="@dimen/setup_step_action_padding"
+            android:minHeight="@dimen/setup_step_action_height"
+            android:layout_height="wrap_content" />
+    </androidx.cardview.widget.CardView>
+
 </merge>
