--- a/app/src/main/res/xml/prefs_screen_about.xml
+++ b/app/src/main/res/xml/prefs_screen_about.xml
@@ -24,7 +24,7 @@
         android:summary="@string/gnu_gpl"
         android:icon="@drawable/ic_settings_about_license">
         <intent android:action="android.intent.action.VIEW"
-            android:data="https://github.com/Helium314/HeliBoard/blob/main/LICENSE-GPL-3" />
+            android:data="https://github.com/Apechi/Primeboard/blob/main/LICENSE-GPL-3" />
     </Preference>
 
     <Preference
@@ -39,7 +39,7 @@
         android:icon="@drawable/ic_settings_about_github">
         <intent
             android:action="android.intent.action.VIEW"
-            android:data="https://github.com/Helium314/HeliBoard" />
+            android:data="https://github.com/Apechi/Primeboard" />
     </Preference>
 
     <Preference
